# sdf-project-library-managment-system-

./: Book.cpp  Book.h  CMakeLists.txt  Discussion_Forum.cpp  Discussion_Forum.h  add_book_page.cpp  add_book_page.h  add_book_page.ui  borrowed_books.cpp  borrowed_books.h  borrowed_books.ui  changepassword.cpp  changepassword.h  changepassword.ui  chatclient.cpp  chatclient.h  chatclient.ui  create_forum.cpp  create_forum.h  create_forum.ui  find_forum.cpp  find_forum.h  find_forum.ui  find_friend.cpp  find_friend.h  find_friend.ui  global_variables.cpp  global_variables.h  homewindow.cpp  homewindow.h  homewindow.ui  lent_books.cpp  lent_books.h  lent_books.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pending_book_req.cpp  pending_book_req.h  (+26 more)
